--- a/app/src/main/res/layout/activity_profie_fragment.xml
+++ b/app/src/main/res/layout/activity_profie_fragment.xml
@@ -148,7 +148,7 @@
         app:layout_constraintVertical_bias="0.0" />
 
     <ImageView
-        android:id="@+id/imageView25"
+        android:id="@+id/close_btn"
         android:layout_width="wrap_content"
         android:layout_height="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -173,7 +173,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.812"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView25"
+        app:layout_constraintTop_toBottomOf="@+id/close_btn"
         app:layout_constraintVertical_bias="0.037" />
 
     <EditText
