--- a/app/src/main/res/layout/profie_fragment.xml
+++ b/app/src/main/res/layout/profie_fragment.xml
@@ -149,7 +149,7 @@
         app:layout_constraintVertical_bias="0.0" />
 
     <ImageView
-        android:id="@+id/imageView25"
+        android:id="@+id/close_btn"
         android:layout_width="35dp"
         android:layout_height="35dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -174,7 +174,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.812"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView25"
+        app:layout_constraintTop_toBottomOf="@+id/close_btn"
         app:layout_constraintVertical_bias="0.01999998" />
 
     <EditText
