--- a/app/src/main/res/layout/my_drags_fragment.xml
+++ b/app/src/main/res/layout/my_drags_fragment.xml
@@ -148,6 +148,7 @@
         </androidx.constraintlayout.widget.ConstraintLayout>
 
         <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recycler_view"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             app:layout_constraintBottom_toBottomOf="parent"
